- Updated all Flower Bulb tooltips to describe where they can be placed
- Made Flower Bulbs placeable on friendly Lush Vine walls
- Updated code that stores ForegroundItems, unused until now
- Stupid workaround for Waterberry Bush not dropping items (???)
- Added sound to placing Lush Grass Seeds
- Added sound to Gemflower use
- Fixed Verdant grass decor sprite issue
- Fixed Omnidirectional Anchor tile framing
- Optimized how grasses are categorized heavily, fixed load order