@@ -8,6 +8,7 @@ using Verdant.Systems.Foreground.Parallax;
 using Verdant.Items.Verdant.Materials;
 using Verdant.Systems.ScreenText.Caches;
 using Verdant.Systems.ScreenText;
+using Verdant.Systems.Syncing;
 
 namespace Verdant.Items.Verdant.Tools;
 
@@ -17,8 +18,6 @@ class CloudsproutPuff : ApotheoticItem
     public override void SetDefaults() => QuickItem.SetStaff(this, 40, 20, ProjectileID.GolemFist, 9, 0, 24, 0, 0, ItemRarityID.Green);
     public override void AddRecipes() => QuickItem.AddRecipe(this, TileID.LivingLoom, 1, (ModContent.ItemType<YellowBulb>(), 1), (ModContent.ItemType<PuffMaterial>(), 14));
 
-    public override void ModifyShootStats(Player player, ref Vector2 position, ref Vector2 velocity, ref int type, ref int damage, ref float knockback) => position = Main.MouseWorld;
-
     public override bool Shoot(Player player, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback)
     {
         foreach (var item in ForegroundManager.PlayerLayerItems)
@@ -26,11 +25,19 @@ class CloudsproutPuff : ApotheoticItem
             if (item is CloudbloomEntity && Vector2.DistanceSquared(item.Center, Main.MouseWorld) < 40 * 40)
             {
                 item.killMe = true;
+
+                if (Main.netMode != NetmodeID.SinglePlayer && player.whoAmI == Main.myPlayer)
+                    new CloudbloomModule((byte)Main.myPlayer, ForegroundManager.PlayerLayerItems.IndexOf(item)).Send();
+
                 return false;
             }
         }
 
-        ForegroundManager.AddItem(new CloudbloomEntity(Main.MouseWorld, true), true, true);
+        var mouse = Main.MouseWorld;
+        ForegroundManager.AddItem(new CloudbloomEntity(mouse, true), true, true);
+
+        if (Main.netMode != NetmodeID.SinglePlayer && player.whoAmI == Main.myPlayer)
+            new CloudbloomModule((byte)Main.myPlayer, mouse.X, mouse.Y, true).Send();
         return false;
     }
 
